--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,7 @@ resources/azurefile-dockervolumedriver.env
 resources/docker-registry-v2.tar.gz
 resources/nvidia-docker.*
 resources/nvidia-driver*.run
+python_api/secrets.py
+
+#pycharm
+.idea
